<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView2l"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="176dp"
        android:text="@string/textviewg"
        android:textColor="#575CE5"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7l"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="249dp"
        android:layout_marginEnd="164dp"
        android:text="@string/textviewa"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUserNamel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="299dp"
        android:backgroundTint="#575CE5"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/usernamel"
        android:textColor="#575CE5" />

    <EditText
        android:id="@+id/etPasswordl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="192dp"
        android:backgroundTint="#575CE5"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="@string/passwordl"
        android:textColor="#575CE5"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/loginButtonl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="269dp"
        android:layout_marginBottom="121dp"
        android:backgroundTint="#575CE5"
        android:text="@string/loginl" />

</RelativeLayout>