<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView1l"
        android:layout_width="278dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:width="10dp"
        android:text="@string/textviewt"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1l"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="43dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/indian"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2l"
        android:layout_width="228dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="85dp"
        android:text="Welcome!"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="274dp"
        android:layout_marginBottom="280dp"
        android:backgroundTint="#FFFFFF"
        android:text="Tap to start"
        android:textColor="#575CE5"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="69dp"
        android:layout_marginBottom="64dp"
        android:text="@string/textviewac"
        android:textColor="#2355CE" />

    <TextView
        android:id="@+id/textView7l"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="166dp"
        android:text="Welcome!"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

</RelativeLayout>